@@ -117,12 +117,16 @@ Usage    : CATALOG LIST (MOBS/ITEMS/) (NAME MASK)\n\r\
 Usage    : CATALOG (DELETE) [ITEM/MOB NAME]\n\r\
 Usage    : CATALOG (ROOM/AREA/WORLD) (MOBS/ITEMS/)\n\r\
 Usage    : CATALOG EDIT [ITEM NAME]\n\r\
+Usage    : CATALOG SCAN/DBSCAN (ROOM/AREA/WORLD) (MOBS/ITEMS/)\n\r\
+Usage    : CATALOG OVERLOOK/DBOVERLOOK (ROOM/AREA/WORLD) (MOBS/ITEMS/)\n\r\
 Example  : catalog list\n\r\
 Example  : catalog list mobs the st\n\r\
 Example  : catalog the waiter\n\r\
 Example  : catalog delete the waiter\n\r\
 Example  : catalog edit the sword\n\r\
 Example  : catalog room mobs\n\r\
+Example  : catalog scan area\n\r\
+Example  : catalog dboverlook area mobs\n\r\
 Short(s) : \n\r\
 This command is used to manage your muds global catalog of generic mobs and/or items. \
 The catalog is a place where you can store templates of mobs and items for reuse, \
@@ -132,6 +136,11 @@ of them.  You can create \
 new instances of a cataloged object simply by entering CREATE <cataloged object name>. \
 Your catalog is keyed by name, so once the name of a cataloged item or mob is set, it \
 should not be changed. \
+\n\r\n\r\
+You may review the objects in your catalog using the catalog list command. You can also \
+check the catalog synchronicity of the objects in your live rooms with scan, or your \
+saved rooms with dbscan.  You can check for uncataloged objects in live rooms with the \
+overlook parameter, or in your saved rooms with dboverlook. \ 
 \n\r\n\r\
 You may delete an object from your catalog to stop using it as a global template. \
 Deleting an object from the catalog only detaches instances of a cataloged object from \
